[package]
name = "rperf"
version = "1.0.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1.6"
crossbeam-utils = "0.8.5"
thread-priority = "0.2.4"
affinity = "0.1.1"
tokio = { version = "1.9.0", features = ["full"] }
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
howlong = "0.1.7"
